<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="365dp"
        android:layout_height="412dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="19dp">

        <TextView
            android:id="@+id/label_patternNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_patternNumber"
            android:layout_column="0"
            android:layout_row="0"
            android:labelFor="@id/text_patternNumber"/>

        <EditText
            android:id="@+id/text_patternNumber"
            android:layout_width="255dp"
            android:layout_height="47dp"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="10"
            android:inputType="text"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="25dp" />

        <TextView
            android:id="@+id/label_OR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_or"
            android:textSize="24dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/text_keyword"
            android:layout_width="273dp"
            android:layout_height="131dp"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="121dp" />

        <TextView
            android:id="@+id/label_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_keyword"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="top"
            android:labelFor="@id/text_keyword"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="121dp" />

        <TextView
            android:id="@+id/label_search_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnSpan="2"

            android:padding="5dp"
            android:text="@string/lbl_search_help"/>

    </GridLayout>

    <!--//TODO Add category list select, add brand list select-->
    <ListView
        android:id="@+id/list_search_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_search"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>