<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_brand"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="102dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_category"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/button_brand"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_category"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.706"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>